# gcode-security-guard

./: .gitignore  CONTEXT.md  README.md  config.yaml  pyproject.toml
config/: .env.template
deploy/: .env.example  README.md  gcode-mcp-server.service  gcode-security-guard.service  gcode-selinux.te  install.sh  setup.sh
schema/: gcode-protocol.json
src/: __init__.py
src/api/: server.py
src/audit/: logger.py  models.py
src/contracts/: types.py
src/gcode/: __init__.py
src/gcode/alert/: __init__.py  cli.py  engine.py  manager.py  models.py  notifier.py
src/gcode/cli/: __init__.py  main.py
src/gcode/core/: __init__.py  config.py  engine.py  session.py
src/gcode/logpipe/: __init__.py  cli.py  detectors.py  engine.py  models.py  pipeline.py  sources.py
src/gcode/mcp/: __init__.py  executor.py  sandbox.py  server.py  tools_management.py  tools_metrics.py  tools_readonly.py
src/gcode/monitor/: __init__.py  checkers.py  collector.py  evaluator.py  models.py
src/gcode/reasoning/: __init__.py  base.py  reasoner.py  tool_registry.py  types.py
src/gcode/reasoning/providers/: __init__.py  anthropic.py  openai_compat.py
src/gcode/report/: __init__.py  reporter.py
src/intent/: classifier.py  model.py
tests/: __init__.py  test_alert.py  test_engine.py  test_logpipe.py  test_monitor.py  test_reporter.py  test_session.py
